--- a/style.css
+++ b/style.css
@@ -2,22 +2,50 @@ body {
   margin: 0;
   background: black;
   overflow: hidden;
+  font-family: sans-serif;
 }
 
 .gallery {
   width: 100vw;
   height: 100vh;
+  position: relative;
 }
 
-.art {
+.artwork {
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: contain;
   opacity: 0;
   transition: opacity 0.8s ease;
 }
 
-.art.active {
+.artwork.active {
   opacity: 1;
+}
+
+.artwork img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* 오버레이 텍스트 */
+.info {
+  position: absolute;
+  left: 40px;
+  bottom: 40px;
+  color: white;
+  opacity: 0.85;
+}
+
+.info h2 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.info p {
+  margin: 6px 0 0;
+  font-size: 14px;
+  opacity: 0.8;
 }
