--- a/style.css
+++ b/style.css
@@ -60,8 +60,12 @@ body {
   cursor: pointer;
 }
 
-.info { pointer-events: none; }
-
 .artwork { pointer-events: none; }
 .artwork.active { pointer-events: auto; }
+
+.info { pointer-events: none; }
+
+.artwork a { display:block; width:100%; height:100%; }
+.artwork a img { cursor: pointer; }
+
 
