--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.8s ease;
 }
 
 .artwork.active {
@@ -67,6 +67,7 @@ body {
 
 .artwork a { display:block; width:100%; height:100%; }
 .artwork a img { cursor: pointer; }
+
 
 
 
