--- a/style.css
+++ b/style.css
@@ -68,6 +68,18 @@ body {
 .artwork a { display:block; width:100%; height:100%; }
 .artwork a img { cursor: pointer; }
 
+.counter {
+  position: absolute;
+  right: 40px;
+  bottom: 40px;
+  color: white;
+  font-size: 14px;
+  letter-spacing: 1px;
+  opacity: 0.7;
+  font-family: sans-serif;
+  z-index: 10;
+}
+
 
 
 
