--- a/style.css
+++ b/style.css
@@ -85,6 +85,23 @@ img {
   user-select: none;
 }
 
+.back.home{
+  position: fixed;
+  top: 16px;
+  left: 16px;
+
+  font-size: 14px;
+  opacity: 0.7;
+  text-decoration: none;
+  color: white;
+
+  z-index: 1000;
+}
+
+.back.home:hover{
+  opacity: 1;
+}
+
 
 
 
